// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edits an existing file correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <h2
          class="sub header study--header-sub"
        />
        <button
          class="ui tiny basic icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
          <h2
            class="ui header"
          >
            organization.jpeg
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer column"
        >
          <div
            class="ui segments noBorders"
          >
            <div
              class="ui horizontal segments noBorders"
            >
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Approval Status
                </h4>
                <div
                  class="ui orange tiny basic label"
                >
                  Pending review
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Document Type
                </h4>
                <div
                  class="ui small basic label"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Last Updated
                </h4>
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Size
                </h4>
                <div
                  class="ui small basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
            <div
              class="ui segment noBorders"
            >
              <h4
                class="ui grey header"
              >
                Description
              </h4>
              <p>
                Month necessary animal end standard case. View system operation message decade. Actually sing because deal everything woman subject.
              </p>
            </div>
          </div>
        </div>
        <div
          class="three wide computer eight wide mobile eight wide tablet column"
        >
          <h5
            class="ui blue top attached center aligned header"
          >
            Actions
          </h5>
          <div
            class="ui raised secondary attached segment"
          >
            <button
              class="ui medium fluid icon primary left labeled button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <div
              class="ui divider"
            />
            <div
              class="ui mini fluid buttons"
            >
              <button
                class="ui grey small icon left labeled button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <table
            class="ui selectable very compact table"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="single line center aligned bottom aligned"
                  colspan="3"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini compact icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class="version--item"
              >
                <td
                  class="collapsing"
                >
                  <div
                    class="ui orange tiny basic ribbon label"
                    title="Latest Version"
                  >
                    Pending review
                  </div>
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edits an existing file correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <h2
          class="sub header study--header-sub"
        />
        <button
          class="ui tiny basic icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
          <h2
            class="ui header"
          >
            mynewfile.txt
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer column"
        >
          <div
            class="ui segments noBorders"
          >
            <div
              class="ui horizontal segments noBorders"
            >
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Approval Status
                </h4>
                <div
                  class="ui teal tiny basic label"
                >
                  Approved
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Document Type
                </h4>
                <div
                  class="ui small basic label"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Last Updated
                </h4>
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
              <div
                class="ui segment noBorders"
              >
                <h4
                  class="ui grey header"
                >
                  Size
                </h4>
                <div
                  class="ui small basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
            <div
              class="ui segment noBorders"
            >
              <h4
                class="ui grey header"
              >
                Description
              </h4>
              <p>
                Some description here
              </p>
            </div>
          </div>
        </div>
        <div
          class="three wide computer eight wide mobile eight wide tablet column"
        >
          <h5
            class="ui blue top attached center aligned header"
          >
            Actions
          </h5>
          <div
            class="ui raised secondary attached segment"
          >
            <button
              class="ui medium fluid icon primary left labeled button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <div
              class="ui divider"
            />
            <div
              class="ui mini fluid buttons"
            >
              <button
                class="ui grey small icon left labeled button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="thirteen wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <table
            class="ui selectable very compact table"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="single line center aligned bottom aligned"
                  colspan="3"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini compact icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class="version--item"
              >
                <td
                  class="collapsing"
                >
                  <div
                    class="ui teal tiny basic ribbon label"
                    title="Latest Version"
                  >
                    Approved
                  </div>
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                </td>
              </tr>
              <tr
                class="version--item"
              >
                <td
                  class="center aligned middle aligned"
                >
                  <div
                    class="ui orange mini circular empty label"
                  />
                </td>
                <td
                  class=""
                >
                  <p
                    title="VersionFileName.js"
                  >
                    <b>
                      VersionFileName.js
                    </b>
                  </p>
                  <p
                    data-testid="version-item"
                    title="version description"
                  >
                    <small>
                      version description
                    </small>
                  </p>
                </td>
                <td
                  class="collapsing right aligned top aligned"
                >
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
